--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# Ini adalah alur kerja dasar untuk membantu Anda memulai Tindakan
 
-name: CI
+nama  : RuzzBotz⸸
 
 # Controls when the workflow will run
 on:
